# NamedPipes

./: .gitignore
NamedPipeClient/: NamedPipeClient.sln  Program.cs
NamedPipeClientListener/: NamedPipeClientListener.sln  Program.cs
NamedPipeServer/: CMakeLists.txt  ServerMain.cpp
NamedPipeServer/inc/: ArgParse.h  BaseNamedPipe.h  CompletionServer.h  MultithreadedServer.h  NamedPipeOstream.h  NamedPipeServer.h  Options.h  Options.test.h  OverlapServer.h  StringUtils.h
NamedPipeServer/src/: CompletionServer.cpp  MultithreadedServer.cpp  NamedPipeOstream.cpp  Options.cpp  Options.test.cpp  OverlapServer.cpp  StringUtils.cpp
NamedPipesCpp/: CMakeLists.txt
NamedPipesCpp/NamedPipesClient/src/: ClientMain.cpp
NamedPipesCpp/NamedPipesLib/: CMakeLists.txt
NamedPipesCpp/NamedPipesLib/inc/: Np2.h  ToolClient.h  ToolServer.h  iocp.h
NamedPipesCpp/NamedPipesLib/src/: Np2.cpp  ToolServer.cpp  tool_server.cpp
NamedPipesCpp/NamedPipesServer/: CMakeLists.txt
NamedPipesCpp/NamedPipesServer/src/: ServerMain.cpp
NamedPipesIocp/: CMakeLists.txt  beam.sln  beam.vcxproj  beam.vcxproj.filters
NamedPipesIocp/NamedPipe/: NamedPipe.vcxproj  NamedPipe.vcxproj.filters
NamedPipesIocp/NamedPipesClient/: CMakeLists.txt
NamedPipesIocp/NamedPipesClient/src/: ClientMain.cpp
NamedPipesIocp/NamedPipesLib/: CMakeLists.txt
NamedPipesIocp/NamedPipesLib/inc/: NamedPipes.h
NamedPipesIocp/NamedPipesLib/src/: NamedPipes.cpp
NamedPipesIocp/NamedPipesServer/src/: ServerMain.cpp
NamedPipesIocp/beam/x64/Debug/: beam.exe.recipe  vc143.idb
NamedPipesIocp/beam/x64/Debug/beam.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  beam.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
NamedPipesIocp/inc/: iocp.h  main.cpp  tool_server.h
NamedPipesIocp/src/: tool_server.cpp
